# OpenGL_learn

./: .gitattributes  .gitignore  CMakeLists.txt  glad.c  main.cpp
GLframework/: core.h  geometry.cpp  geometry.h  mesh.cpp  mesh.h  object.cpp  object.h  scene.cpp  scene.h  shader.cpp  shader.h  texture.cpp  texture.h
GLframework/geometry/: geometry.cpp  geometry.h
GLframework/light/: ambient_light.cpp  ambient_light.h  directional_light.cpp  directional_light.h  light.cpp  light.h  point_light.cpp  point_light.h  spot_light.cpp  spot_light.h
GLframework/material/: material.cpp  material.h  phong_material.cpp  phong_material.h  white_material.cpp  white_material.h
GLframework/renderer/: renderer.cpp  renderer.h
GLframework/tools/: tools.cpp  tools.h
application/: Assimp_loader.cpp  Assimp_loader.h  CMakeLists.txt  application.cpp  application.h
application/camera/: camera.cpp  camera.h  camera_control.cpp  camera_control.h  game_camera_control.cpp  game_camera_control.h  orthographic_camera.cpp  orthographic_camera.h  perspective_camera.cpp  perspective_camera.h  track_ball_camera_control.cpp  track_ball_camera_control.h
assets/fbx/: Idle.fbx  TPOSS.fbx  Tpose.FBX
assets/fbx/Luxiya/: R1LuxiyaMd010011.fbx
assets/fbx/YiXuan/: YiXuan.fbx  YiXuan_UI.fbx
assets/shaders/: fragment.glsl  phong.frag  phong.vert  vertex.glsl  white.frag
funcs/: CMakeLists.txt  func.cpp
wrapper/: check_error.cpp  check_error.h
